--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <h1>Games Shop</h1>
       <nav>
         <ul>
-          <li><a href="">Sobre a loja</a></li>
-          <li><a href="">Contato</a></li>
+          <li><a href="#loja">Sobre a loja</a></li>
+          <li><a href="#contact">Contato</a></li>
         </ul>
       </nav>
     </div>
